2005-06-14  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* callbacks.c (cb_update_disks, update_disk, add_new_disks): 
	* interface.c (create_disk_view): 
	Convert device store from tree store to list store. This removes space
	to the left of icons in device list. Closes #307683.

	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.

2005-06-13  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* procman.c (procman_data_new): 
	* src/gnome-system-monitor.schemas.in:
	Modified default colors to be a little brighter. Closes #305877.
	
	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.	

2005-06-12  Benoît Dejean  <TazForEver@dlfp.org>

	* src/callbacks.c: (cb_timeout), (cb_radio_processes):
	* src/callbacks.h:
	* src/interface.c: (create_proc_view), (create_main_window):
	Moved Show combo box functionality to View menu.
	Closes #305874.

2005-06-11  Martin Ejdestig  <mejde@dtek.chalmers.se>

	* src/callbacks.c: (cb_app_delete), (cb_net_in_color_changed),
	(cb_net_out_color_changed), (cb_change_current_page):
	* src/callbacks.h:
	* src/gnome-system-monitor.schemas.in:
	* src/interface.c: (create_sys_view):
	* src/load-graph.c: (net_scale), (get_net), (load_graph_update),
	(load_graph_unalloc), (load_graph_alloc), (load_graph_new):
	* src/load-graph.h:
	* src/procman.c: (timeouts_changed_cb), (color_changed_cb),
	(procman_data_new):
	* src/procman.h:

	Add network history graph. Closes #164115 and #120323.
	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/gnome-system-monitor.schemas.in:
	* src/procman.c: (procman_get_tree_state),
	(procman_save_tree_state):
	* src/proctable.c: (cb_columns_changed),
	(my_gtk_tree_view_get_column_with_sort_column_id),
	(proctable_set_columns_order), (proctable_get_columns_order),
	(proctable_new):
	* src/proctable.h: Implemented save/store for the proctable columns
	order.

2005-06-10  Benoît Dejean  <TazForEver@dlfp.org>

	* src/procdialogs.c: (create_proc_field_page):