@@ -1,3 +1,11 @@
+2005-06-23  Scott Reeves  <sreeves@novell.com>
+
+	* src/procdialogs.c src/procdialogs.h 
+	Change priority slider max value to 19 to reflect what is
+	allowed by the renice command.
+	
+	Reviewed by Benoît Dejean  <TazForEver@dlfp.org>.
+
 2005-06-14  Martin Ejdestig  <mejde@dtek.chalmers.se>
 
 	* callbacks.c (cb_update_disks, update_disk, add_new_disks): 
